moving resume online

--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://andy8647.com/">
+    <meta property="og:url" content="https://aroseo.com/">
     <meta property="og:title" content="Amanda Ortiz, Software Developer">
     <meta property="og:description" content="Software Developer and Operations Manager based in Arcata, CA, passionate about building my career, traveling and exploring new places.">
-    <meta property="og:image" content="https://andy8647.com/website.jpg">
+<!--     <meta property="og:image" content="https://andy8647.com/website.jpg"> -->
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://andy8647.com/">
     <meta property="twitter:title" content="Amanda Ortiz, Software Developer">
     <meta property="twitter:description" content="Software Developer and Operations Manager based in Arcata, CA, passionate about building my career, traveling and exploring new places.">
-    <meta property="twitter:image" content="https://andy8647.com/website.jpg">
+    <!-- <meta property="twitter:image" content="https://andy8647.com/website.jpg"> -->
     <title>Amanda Ortiz</title>
 
     <style>
